# dotfiles

./: .Xmodmap  .Xresources  .a11ybashrc  .alias  .aspell.en.prepl  .aspell.en.pws  .bashrc  .emacs  .ghci  .gitignore  .octaverc  .screenrc  .sibi-env  .xmobarrc  .xsession  FRESH.md  GPG.md  Mac.md  README  README.md  README.org  alacritty.yml  aws-config  emacs.sh  emacsSync.hs  init.el  ipython_config.py  justfile  mc.emacs.keymap  mc.refresher.md  mprocs.yaml  nixos_symlink.sh  setup.sh  sibiSpecific.sh  symlink.sh  tfswitch.toml  tgswitch.toml  virtual.sh  xmonad.sh  zellij.kdl  (+1 more)
.config/: starship.toml
.config/fish/: config.fish
.config/fish/functions/: compress.fish  git-undo.fish  please.fish  uncompress.fish
.emacs.d/: ai.el  daml.el  devops.el  haskell.el  init.el  org.el  python.el  sibi-utils.el  sml.el  snippets  web.el
.emacs.d/cedet-1.0.1/: cedet-build.el
.emacs.d/cedet-1.0.1/cogre/: cogre-ascii.elc  cogre-convert.elc  cogre-dot-mode.elc  cogre-layout.elc  cogre-load.elc  cogre-loaddefs.el  cogre-mode.elc  cogre-periodic.elc  cogre-semantic.elc  cogre-srecode.elc  cogre-uml.elc  cogre-utest.elc  cogre.elc  picture-hack.elc  wisent-dot-wy.el  wisent-dot-wy.elc  wisent-dot.elc
.emacs.d/cedet-1.0.1/common/: ChangeLog  cedet-autogen.elc  cedet-compat.elc  cedet-cscope.elc  cedet-edebug.elc  cedet-files.elc  cedet-global.elc  cedet-graphviz.elc  cedet-idutils.elc  cedet-load.elc  cedet-loaddefs.el  cedet-utests.elc  cedet.el  cedet.elc  fame.elc  (+7 more)
.emacs.d/ecb-2.40/: Makefile  ecb-advice-test.elc  ecb-analyse.elc  ecb-autogen.elc  ecb-cedet-wrapper.elc  ecb-common-browser.elc  ecb-compatibility.elc  ecb-compilation.elc  ecb-create-layout.elc  ecb-cycle.elc  ecb-eshell.elc  ecb-examples.elc  ecb-face.elc  ecb-file-browser.elc  ecb-help.elc  ecb-jde.elc  ecb-layout-defs.elc  ecb-layout.elc  ecb-method-browser.elc  ecb-mode-line.elc  ecb-navigate.elc  ecb-speedbar.elc  ecb-symboldef.elc  ecb-tod.elc  ecb-upgrade.elc  ecb-util.elc  ecb-winman-support.elc  ecb.elc  silentcomp.elc  tree-buffer.elc
.gnupg/: gpg-agent.conf  gpg.conf
.ssh/: config
.stack/: config.yaml  stack.yaml
.xmonad/: README.md  sibi-xmonad.cabal  stack.yaml  update.sh  xmonad.hs
ansible/: README.md  ansible.cfg  hosts
cnx/: Cargo.toml  shell.nix
cnx/src/: main.rs
machines/: justfile  nix-registry.json  packages.nix
machines/asus/: configuration.nix  flake.nix  hardware-configuration.nix  justfile
machines/home-manager/: alias.nix  latitude.nix  nuc.nix  overlay.nix  packages.nix
machines/latitude-7490/: alias.nix  configuration.nix  flake.nix  hardware-configuration.nix  justfile
machines/modules/: albert.nix  cnx.nix  logid.nix  sway.nix
machines/nuc8i7beh/: configuration.nix  flake.nix  hardware-configuration.nix  justfile
machines/system-modules/: cloudflare-warp.nix
nix/: .haskell.nix  .package.nix  Makefile  README.md  README.org  REFRESH.md  configuration.nix  emacs-overlay.nix  nixpkgs.nix  overrides.nix  packages.nix
nix/.nixpkgs/: config.nix
nix/overrides/: libmpd.nix  timezone-olson.nix  x11.nix  xmobar.nix  xmonad-contrib.nix  xmonad-extras.nix  xmonad.nix
srv/: README.md
utils/: README.md  default.nix  derivation.nix  sibi-utils.nix  stack.yaml  utils.cabal
utils/app/: Disk.hs  Distro.hs  Main.hs  Uptime.hs
utils/src/: Lib.hs
utils/test/: Spec.hs
xmobar/: ChangeLog.md  Makefile  README.md  default.nix  derivation.nix  package.yaml  sibi-xmobar.cabal  stack.yaml
xmobar/app/: Main.hs
xmobar/src/: Lib.hs
xmonad/: README.md  default.nix  derivation.nix  result  shell.nix  sibi-xmonad.cabal  stack.yaml  xmonad.hs
(+267 files in other folders)
