[package]
name = "cnx-sibi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
byte-unit = "4.0.13"
cnx = "0.3.0"
cnx-contrib = { version = "0.1.0", features = ["wireless"]}
iwlib = "0.1.0"
weathernoaa = "0.2.0"
