name:                utils
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psibi/dotfiles#readme
license:             BSD3
license-file:        LICENSE
author:              Sibi
maintainer:          sibi@psibi.in
copyright:           2017 Sibi Prabakaran
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       shell-conduit >= 4.6.0,
                       MissingH,
                       split,
                       text,
                       attoparsec
  default-language:    Haskell2010

executable sibi-uptime
  hs-source-dirs:      app
  main-is:             Uptime.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , utils
  default-language:    Haskell2010

executable sibi-distro
  hs-source-dirs:      app
  main-is:             Distro.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , utils
  default-language:    Haskell2010

executable sibi-disk
  hs-source-dirs:      app
  main-is:             Disk.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , utils
  default-language:    Haskell2010

executable sibi-utils
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , utils
                     , optparse-applicative
  default-language:    Haskell2010

test-suite utils-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , utils
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/psibi/dotfiles
